Fix promo spacer overlap with carousel dot

--- a/src/components/PromoSpacer/PromoSpacer.scss
+++ b/src/components/PromoSpacer/PromoSpacer.scss
@@ -17,6 +17,7 @@
     color: $color-green;
     text-decoration: none;
     font-size: 12px;
+    background: $color-white-primary;
 }
 
 .promo-spacer__icon {
